# jj-graph

./: .gitignore  REUSE.toml  package.json
client/: README.md  env.d.ts  index.html  package.json  tsconfig.app.json  tsconfig.bun.json  vite.config.ts
client/src/: App.vue  main.ts  vscode-mock-api.ts
client/src/assets/: base.css  main.css
common/: package.json
common-client/: package.json  tsconfig.app.json  tsconfig.bun.json
common-client/src/components/: DevTestOptions.vue  Graph.vue  GraphContextMenu.vue  GraphLayer.vue  IdPrefix.vue  NodeDescription.vue
common-client/src/icons/: DownPlus.vue  (+1 more)
common-server/: index.ts  integration.ts  jj-backend.ts  jj.ts  package.json  tmpFileUtils.ts  tsconfig.json
common-server/request-handlers/: abandon.ts  describe.ts  edit.ts  listRepos.ts  log.ts  newChange.ts  viewDiff.ts
common/api/: abandon.ts  base.ts  describe.ts  edit.ts  index.ts  listRepos.ts  log.ts  newChange.ts  viewDiff.ts
common/jj-graph-parser/: commit-graph-parser.ts  diff-summary-parser.ts  graph-parser.ts
common/jj-graph-renderer/: color.ts  index.ts  layout.ts  svg-renderer.ts
common/models/: diff.ts
extension/: .gitignore  .vscode-test.mjs  .vscodeignore  CHANGELOG.md  README.md  package.json  tsconfig.json
extension/src/: extension.ts  textDocumentContentProvider.ts
jjcb/dotnet/: Program.cs  jjcb.csproj
jjcb/golang/: .gitignore  build.sh  go.mod  main.go  vsce-copy.sh
jjcb/rust/: Cargo.toml  build.sh  main.rs
jjcb/zig/: build.sh  build.zig  build.zig.zon  vsce-copy.sh
server/: package.json  server.ts  tsconfig.json
(+30 files in other folders)
